kubernetes/task-01/mavenweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mavenweb-app
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
      - name: mavenweb
        image: shahir5890/mavendocker:1.2.7
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 112m
            memory: 112Mi
          limits:
            cpu: 256m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /maven-web-application
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /maven-web-application
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 30
        startupProbe:
          httpGet:
            path: /maven-web-application
            port: 8080
          failureThreshold: 12  #12*5=60s
          periodSeconds: 5 
---
apiVersion: v1
kind: Service
metadata:
  name: mavensvc
  namespace: prod
spec:
  type: ClusterIP
  selector:
    env: prod
  ports:
  - port: 80
    targetPort: 8080
