kubernetes/task-01/nodeapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
      - name: nodeapp
        image: shahir5890/nodeappjenkins:7
        ports:
        - containerPort: 9981
        resources:
          requests:
            cpu: 112m
            memory: 112Mi
          limits:
            cpu: 256m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 9981
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 9981
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 30
        startupProbe:
          httpGet: 
            path: /
            port: 9981
          failureThreshold: 12
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: nodesvc
  namespace: prod
spec:
  type: ClusterIP
  selector:
    env: prod
  ports:
  - port: 80
    targetPort: 9981
